Closed
Bug 1718727
Opened 4 years ago
Closed 4 years ago
[Wayland] Don't calculate popup sizes on Wayland
Categories
(Core :: Widget: Gtk, defect)
Core
Widget: Gtk
Tracking
()
RESOLVED
FIXED
93 Branch
Tracking | Status | |
---|---|---|
firefox93 | --- | fixed |
People
(Reporter: stransky, Assigned: stransky)
References
(Blocks 1 open bug, Regressed 1 open bug)
Details
Attachments
(2 files, 3 obsolete files)
As Wayland is missing concept of global screen positions we can't make any assumptions where and how should be a popup window placed so let's skip that on Wayland completely.
Assignee | ||
Comment 1•4 years ago
|
||
Assignee | ||
Comment 2•4 years ago
|
||
Depends on D118960
Updated•4 years ago
|
Component: Layout: Positioned → Widget: Gtk
Updated•4 years ago
|
Attachment #9229347 -
Attachment is obsolete: true
Updated•4 years ago
|
Attachment #9229348 -
Attachment is obsolete: true
Assignee | ||
Comment 3•4 years ago
|
||
Assignee | ||
Comment 4•4 years ago
|
||
Depends on D122101
Assignee | ||
Comment 5•4 years ago
|
||
Depends on D122102
Assignee | ||
Comment 6•4 years ago
|
||
Assignee | ||
Comment 7•4 years ago
|
||
Assignee | ||
Comment 8•4 years ago
|
||
Updated•4 years ago
|
Attachment #9235380 -
Attachment is obsolete: true
Assignee | ||
Comment 9•4 years ago
|
||
Comment 10•4 years ago
|
||
Pushed by stransky@redhat.com:
https://hg.mozilla.org/integration/autoland/rev/2ade99e03255
[Wayland] Don't constrain mouse events by screen size on Wayland, r=emilio
https://hg.mozilla.org/integration/autoland/rev/9164d89a3072
[Wayland] Don't constrain popup size by screen size on Wayland, r=emilio
![]() |
||
Comment 11•4 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/2ade99e03255
https://hg.mozilla.org/mozilla-central/rev/9164d89a3072
Status: NEW → RESOLVED
Closed: 4 years ago
status-firefox93:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 93 Branch
Comment 14•4 years ago
|
||
This fix should be in build 20210812214121, shouldn't it? Does it have any requirements for KDE Plasma version?
Flags: needinfo?(stransky)
Assignee | ||
Comment 15•4 years ago
|
||
No, it should work with any Plasma. I'm testing on Fedora 34 / plasma 5.22.4.
Flags: needinfo?(stransky)
Comment 16•4 years ago
|
||
widget.wayland.fractional_buffer_scale
is 0.0
Comment 17•4 years ago
|
||
(In reply to Dmitry Petrov from comment #16)
widget.wayland.fractional_buffer_scale
is 0.0
Sorry, I wrote in the wrong place
You need to log in
before you can comment on or make changes to this bug.
Description
•