Bug 1718727 [Wayland] Don't constrain mouse events by screen size on Wayland, r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D122101